--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -7,7 +7,7 @@ import "../styles/nav.css"
     <div class="container">
         <div class="logo">
             <a href="/index.html">
-                <img src="/src/imgs/logo.svg" alt="SL Logo" width="50" height="50">
+                <img src="/imgs/logo.svg" alt="SL Logo" width="50" height="50">
                 <h1><span class="highlight">Simon Lomax</h1>
             </a>
         </div>
