updated meta tags

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -11,5 +11,6 @@ import "../styles/main.css"
     <meta property="og:title" content="SLBlog" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Astro Blog" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
