updated image url

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -55,7 +55,7 @@ const {frontmatter, Content} = matchingEntry
                     </article>
                     <div class="author-bio">
                         <div class="author-image">
-                            <img src="/src/imgs/simon.png" alt="Alex Johnson">
+                            <img src="/imgs/simon.png" alt="Alex Johnson">
                         </div>
                         <div class="author-info">
                             <h3>About the Author</h3>
