another update to image url

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -38,7 +38,7 @@ const {frontmatter, Content} = matchingEntry
                     <h1>{frontmatter.title}</h1>
                     <div class="post-meta">
                         <div class="author">
-                            <img src="/src/imgs/simon.png" alt="Author Avatar">
+                            <img src="/imgs/simon.png" alt="Author Avatar">
                             <span>By Simon Lomax</span>
                         </div>
                         
