--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -38,7 +38,7 @@ const {frontmatter, Content} = matchingEntry
                     <h1>{frontmatter.title}</h1>
                     <div class="post-meta">
                         <div class="author">
-                            <img src="/imgs/simon.png" alt="Author Avatar">
+                            <img src="/imgs/simon.PNG" alt="Author Avatar">
                             <span>By Simon Lomax</span>
                         </div>
                         
@@ -55,7 +55,7 @@ const {frontmatter, Content} = matchingEntry
                     </article>
                     <div class="author-bio">
                         <div class="author-image">
-                            <img src="/imgs/simon.png" alt="Alex Johnson">
+                            <img src="/imgs/simon.PNG" alt="Simon Lomax">
                         </div>
                         <div class="author-info">
                             <h3>About the Author</h3>
