Updated email in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,7 +33,7 @@ const year = new Date().getFullYear();
             <div class="footer-contact">
                 <h3>Get in Touch</h3>
                 <p>Have questions or want to work together?</p>
-                <a href="mailto:hello@gamedevjournal.com" class="btn btn-primary">Email Me</a>
+                <a href="mailto:simonwlomax@gmail.com" class="btn btn-primary">Email Me</a>
             </div>
         </div>
         
