--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -5,6 +5,7 @@ import "../styles/main.css"
 
 <head>
     <link rel="sitemap" href="sitemap-index.xml">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>{title}</title> 
     <meta charset="utf-8">
