Updated meta data for iOS and safari

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -6,6 +6,11 @@ import "../styles/main.css"
 <head>
     <link rel="sitemap" href="sitemap-index.xml">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="mask-icon" href="favicon.svg" color="#6c5ce7">
+    <meta name="theme-color" content="#6c5ce7">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>{title}</title> 
     <meta charset="utf-8">
