--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -14,9 +14,9 @@ import "../styles/main.css"
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>{title}</title> 
     <meta charset="utf-8">
-    <meta property="og:title" content="SLBlog" />
+    <meta property="og:title" content="Simon Lomax" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Astro Blog" />
+    <meta property="og:description" content="Gamer, Tech Nerd, 3D Printer" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
